apps/network-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: network-test
  namespace: network-test

spec:
  replicas: 2

  selector:
    matchLabels:
      app: network-test

  template:
    metadata:
      labels:
        app: network-test

    spec:
      containers:
        - name: nginx
          image: nginx:alpine

          ports:
            - containerPort: 80
