apps/network-test/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: network-test
  namespace: network-test

spec:
  type: LoadBalancer

  selector:
    app: network-test

  ports:
    - name: http
      port: 80
      targetPort: 80
