apps/network-test/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: network-test
  namespace: network-test

spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway-system

  hostnames:
    - test.k8s.home

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: network-test
          port: 80
